# le

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  FEATURES  HISTORY  Makefile.am  NEWS  README  README.md  README.regex  THANKS  TODO  acconfig.h  acinclude.m4  autogen.sh  bootstrap.conf  configure.ac  configure.in  le.lsm  le.spec  le.spec.in  mkinstalldirs
CVS/: Entries
doc/: CMakeLists.txt  ChangeLog  Makefile.am  README.keymap.ru  le.1
doc/CVS/: Entries  Repository
gnulib/: README
include/: Makefile.am  getopt.patch  xalloca.h
lib/: .cvsignore  .gitignore  Makefile.am  poll.c  rx.c  rx.h
lib/CVS/: Entries  Repository
m4/: .cvsignore  .gitignore  Makefile.am  cxxlink.m4  gnulib-cache.m4  lftp.m4  wcwidth.m4
m4/CVS/: Entries  Repository
misc/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  check-mainmenu  colors-black  colors-blue  colors-defbg  colors-green  colors-white  files2embed.c  gnulib.patch  help  keymap-default  keymap-emacs  le.desktop  mainmenu  mainmenu-ru  syntax
misc/CVS/: Entries  Repository
misc/syntax.d/: ada  as  awk  c  c++  c++-comment  c-comment  c-literal  cpp  css  eiffel  fvwm2  gema  golang  haskell  html  java  javascript  jinja2  logrotate-conf  lout  make-file  markdown  metafont  named-conf  nroff  ocaml  pascal  perl  php  pod  puppet  python  sather  shell  snmp-mib  sql  tcl  tex  texinfo  (+3 more)
misc/syntax.d/CVS/: Entries  Repository
src/: .cvsignore  .gitignore  CMakeLists.txt  ChangeLog  FindNcursesw.cmake  Makefile.am  about.cc  about.h  action-name-func  block.cc  block.h  bm.cc  bm.h  calc.cc  calc.h  chset.cc  chset.h  clipbrd.cc  clipbrd.h  cmd.cc  cmd.h  color.cc  color.h  colormnu.cc  colormnu.h  edit.cc  edit.h  editcalc.cc  efopen.c  efopen.h  ehelp.cc  ext.cc  file.cc  file.h  format.cc  format.h  frames.cc  getch.cc  getch.h  getstr.cc  (+54 more)
src/CVS/: Entries  Repository
